# fitness-tracker

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  build.sh  pyproject.toml  release.sh  start_app.sh
.github/: GITHUB_ACTIONS.md
.github/workflows/: build.yml  release.yml  test-local.yml
backend/: __init__.py  database.py  main.py  migrate.py
backend/api/: __init__.py  analytics.py  body_composition.py  exercise.py  journal.py
backend/models/: __init__.py  body_composition.py  exercise.py  goals.py
backend/schemas/: body_composition.py  exercise.py
backend/services/: __init__.py  body_composition.py  exercise.py
backend/utils/: bmi.py  body_fat.py
desktop/: CMakeLists.txt  README.md  build.sh
desktop/src/: bodycompositionform.cpp  bodycompositionform.h  bodycompositionview.cpp  bodycompositionview.h  datenavigationbar.cpp  exerciselibrary.cpp  exerciselibrary.h  journalcontentarea.cpp  journalcontentarea.h  mainwindow.cpp  mainwindow.h  workoutbuilder.cpp  workoutbuilder.h  workoutview.cpp  workoutview.h
desktop/src/models/: bodycomposition.cpp  bodycomposition.h  datamanager.cpp  datamanager.h  workout.cpp  workout.h
desktop/src/utils/: calculations.cpp
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/Journal/: BatchExerciseForm.tsx  BodyCompositionForm.tsx  (+7 more)
frontend/src/contexts/: UnitContext.tsx
frontend/src/pages/: Charts.tsx  Journal.tsx
frontend/src/types/: index.ts
frontend/src/utils/: units.ts
scripts/: create-release.sh
src/: analyticstab.cpp  analyticstab.h  bodycompositionform.cpp  bodycompositionview.cpp  bodycompositionview.h  datemanager.cpp  datemanager.h  datenavigationbar.h  journalcontentarea.cpp  journalcontentarea.h  main.cpp  workoutbuilder.cpp  workoutbuilder.h  workoutview.h
src/models/: bodycomposition.cpp  bodycomposition.h  datamanager.cpp  datamanager.h  exercise.cpp  exercise.h  setdata.cpp  setdata.h
src/utils/: calculations.h
(+2 files in other folders)
